--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Side Navigation -->
   <nav class="side-nav">
     <ul>
-      <li><a href="mainpage.html" class="active">Home</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="certifications.html">Certifications</a></li>
       <li><a href="projects.html">Projects</a></li>
@@ -87,4 +87,5 @@
 
 </body>
 </html>
+
 
