--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   <!-- Side Navigation -->
   <nav class="side-nav">
     <ul>
-      <li><a href="mainpage.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html" class="nav-link">About</a></li>
       <li><a href="certifications.html">Certifications</a></li>
       <li><a href="projects.html">Projects</a></li>
@@ -83,3 +83,4 @@
 
 </body>
 </html>
+
