--- a/certifications.html
+++ b/certifications.html
@@ -20,7 +20,7 @@
   <!-- Side Navigation (KEEP SAME EVERYWHERE) -->
   <nav class="side-nav">
     <ul>
-      <li><a href="mainpage.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="certifications.html" class="active">Certifications</a></li>
       <li><a href="projects.html">Projects</a></li>
@@ -86,3 +86,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
