--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
   <!-- Side Navigation -->
   <nav class="side-nav">
     <ul>
-      <li><a href="mainpage.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="certifications.html">Certifications</a></li>
       <li><a href="projects.html" class="active">Projects</a></li>
@@ -79,3 +79,4 @@
 
 </body>
 </html>
+
