--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Overlay -->
   <div class="overlay"></div>
 
-  <!-- Side Navigation -->
+  <!-- Side avigation -->
   <nav class="side-nav">
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
@@ -27,7 +27,7 @@
     </ul>
   </nav>
 
-  <!-- Top Bar -->
+  <!-- Top bar -->
   <header class="topbar">
     <div class="menu">&#9776;</div>
 
@@ -39,7 +39,7 @@
     </div>
   </header>
 
-  <!-- Main Content -->
+  <!-- Main content -->
   <main class="content">
     <section class="home">
       <h1>Hi, I'm <span>Amirtha Varshini Sivakumar</span></h1>
@@ -57,11 +57,11 @@
     </section>
   </main>
 
-  <!-- Profile Modal -->
+  <!-- Profile modal -->
   <div class="profile-modal-overlay">
 
     <div class="profile-modal">
-      <!-- ❌ Close Button -->
+      <!-- Closebutton -->
       <span class="close-btn">&times;</span>
 
       <img src="amirtha.jpg" alt="Profile">
@@ -75,17 +75,18 @@
       </p>
 
       <div class="contact">
-        <p>📧 yourmail@gmail.com</p>
-        <p>📞 +91 XXXXXXXX</p>
+        <p> amirvarsh77@gmail.com</p>
+        <p> +91 9080207025</p>
       </div>
     </div>
 
   </div>
 
-  <!-- JavaScript -->
+  <!-- Javascript -->
   <script src="script.js"></script>
 
 </body>
 </html>
+
 
 
