--- a/projects.html
+++ b/projects.html
@@ -5,19 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects | Amirtha Varshini</title>
 
-  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
-  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-  <!-- Overlay -->
+
   <div class="overlay"></div>
 
-  <!-- Side Navigation -->
+
   <nav class="side-nav">
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -40,16 +38,15 @@
     </div>
   </header>
 
-  <!-- Main Content -->
+
   <main class="content">
     <section class="projects">
       <h2 class="section-title">Projects</h2>
 
       <div class="project-container">
 
-        <!-- Project 1 -->
         <div class="project-card">
-          <h3>🌍 Green Atlas</h3>
+          <h3> Green Atlas</h3>
           <p>
             Built a responsive multipage site “The Green Atlas” with plant info.Designed index + detailed pages (Aloe Vera, Money Plant, Rose, Mango).Added CSS media queries for mobile responsiveness. Integrated JS “Random Plant Fact Generator” for interactivity
           </p>
@@ -58,9 +55,9 @@
           </a>
         </div>
 
-        <!-- Project 2 -->
+        
         <div class="project-card">
-          <h3>🎬 Netflix Clone</h3>
+          <h3>Netflix Clone</h3>
           <p>
             A responsive Netflix UI clone built using HTML, CSS, and JavaScript
             with modern layout and styling.
@@ -74,9 +71,9 @@
     </section>
   </main>
 
-  <!-- JS -->
   <script src="script.js"></script>
 
 </body>
 </html>
+
 
